# plane-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cli.ps1  cli.sh  manage.ps1  manage.sh  runseal.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/release/assets/: checksums.sh  package-skill.py  package.ps1  package.sh  verify.sh
.github/scripts/release/github/: cleanup-artifacts.sh
.github/scripts/release/metadata/: beta.py  stable.py
.github/scripts/release/r2/: check.sh  publish.sh  summary.sh  verify.sh
.github/workflows/: guard.yml  release-beta.yml  release-stable.yml
.runseal/lib/: python-module
.runseal/wrappers/: pr.sh
crates/plane-cli/: AGENTS.md  Cargo.toml
crates/plane-cli/src/: api.rs  app.rs  cli.rs  main.rs  output.rs  skill.rs
crates/plane-cli/src/commands/: api.rs  mod.rs
crates/plane-cli/src/commands/api/: asset.rs  comment.rs  crud.rs  dep.rs  generic.rs  me.rs  mod.rs  page.rs  project.rs  reference.rs  request.rs  work_item.rs  work_item_page.rs
crates/plane-cli/src/config/: mod.rs
crates/plane-cli/src/core/: app.rs  error.rs  logger.rs  mod.rs  request.rs  skill.rs  update.rs
crates/plane-cli/src/core/config/: mod.rs
crates/plane-cli/src/core/model/: common.rs  mod.rs  project.rs  work_item.rs
crates/plane-cli/tests/: unit.rs
crates/plane-cli/tests/unit/: cli.rs  config.rs  work_item_page.rs
scripts/: init.py  pyproject.toml
scripts/cli/: init.py  land.py  pr.py  release.py
scripts/lib/utils/: cli.py
skills/plane-cli/: SKILL.md
skills/plane-cli/references/: api.md  scenarios.md
(+6 files in other folders)
