[package]
name = "plane-cli"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Plane command line interface."

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.50", features = ["derive"] }
flate2 = "1.0.35"
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["html"] }
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tar = "0.4.43"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ureq = { version = "2.12.1", features = ["json"] }

[[bin]]
name = "plane"
path = "src/main.rs"
